--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://frozentank.github.io/dark-havens-campaign-website",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "vite build",
     "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
