--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-medium-image-zoom": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
